--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') -%>
 <h1>Compose</h1>
-<form action="post">
-    <input type="text" name="" id="">
+<form action="/compose" method="POST">
+    <input type="text" name="userContent" id="">
     <button type="submit">Publish</button>
 </form>
 <%- include('partials/footer') -%>
