--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,4 +1,4 @@
 <%- include('partials/header') -%>
 <h1><%= title%></h1>
-<p><%= content%></p>
+<p><%= content.substring(0, 100) + "..."%></p>
 <%- include('partials/footer') -%>
