--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
 <% for (const item of blogPosts) { %>
 <h1><%= item.title%></h1>
 <p><%= item.body.substring(0, 100) + "..."%>
-    <a href="posts/<%= item.title%>">Read more</a>
+    <a href="posts/<%= item._id%>">Read more</a>
 </p>
 <% } %>
 <%- include('partials/footer') -%>
